# STT-TTS-Uz

./: .gitignore  README.md  pyproject.toml  requirements.txt  stt_onnx_run.py  tts_onnx_run.py  tts_onnx_run_gpu.py  utils.py
text/: cleaners.py  symbols.py
